Docker Compose file updates
- Launch RabbitMQ by default.
- Launch Traefik by default.
- Switch to an advanced deployment by default.
- Make all addressed, ports, and credentials configurable.
- Add a Redis profile.
- Add Let's Encrypt setup.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -4,15 +4,86 @@
 # To pass values as environment variables to the running containers use
 # the env_file instead.
 
-# Default project name. Change this using the docker-compose `-p, --project-name NAME` option.
+###############################################
+# Change these before the first run.          #
+# Do not change these after the installation. #
+###############################################
+MAYAN_DATABASE_NAME=mayan
+MAYAN_DATABASE_PASSWORD=mayandbpass
+MAYAN_DATABASE_USER=mayan
+MAYAN_RABBITMQ_USER=mayan
+MAYAN_RABBITMQ_PASSWORD=mayanrabbitpass
+MAYAN_REDIS_PASSWORD=mayanredispassword
+
+# Default project name.
 COMPOSE_PROJECT_NAME=mayan
 
-# Default profile
-COMPOSE_PROFILES=all_in_one,postgresql
+##############################
+# End of basic use variables #
+##############################
 
-# MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
-# MAYAN_DOCKER_IMAGE_TAG=s4.1
+# Default profiles.
+COMPOSE_PROFILES=all_in_one,postgresql,redis,rabbitmq,traefik
 
+#########
+# Mayan #
+#########
+MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
+MAYAN_DOCKER_IMAGE_TAG=s4.1
+MAYAN_APP_VOLUME=app
+
+# Change when using an external database host.
+MAYAN_DATABASE_HOST=postgresql
+MAYAN_DATABASE_PORT=5432
+
+#############
+# PostreSQL #
+#############
+MAYAN_DOCKER_POSTGRES_TAG=11.13-alpine
+MAYAN_POSTGRES_VOLUME=postgres
+
+############
+# RabbitMQ #
+############
+
+MAYAN_DOCKER_RABBITMQ_TAG=3.9-alpine
 # Enable to use the RabbitMQ image with the management plugin.
-# Also port mapping 15672:15672 in docker-compose file.
 # MAYAN_DOCKER_RABBITMQ_TAG=3.9-management-alpine
+MAYAN_RABBITMQ_VOLUME=rabbitmq
+
+# Change when using an external RabbitMQ server.
+MAYAN_RABBITMQ_HOST=rabbitmq
+MAYAN_RABBITMQ_PORT=5672
+MAYAN_RABBITMQ_VHOST=mayan
+
+#########
+# Redis #
+#########
+MAYAN_DOCKER_REDIS_TAG=6.2-alpine
+MAYAN_REDIS_VOLUME=redis
+MAYAN_REDIS_PORT=6379
+
+# Change when using an external Redis host.
+MAYAN_REDIS_HOST=redis
+MAYAN_REDIS_RESULT_DATABASE=1
+MAYAN_REDIS_LOCK_DATABASE=2
+
+
+###########
+# Traefik #
+###########
+MAYAN_DOCKER_TRAEFIK_TAG=v2.5
+MAYAN_TRAEFIK_API_INSECURE=true
+# Traefik Let's Encrypt administrative email
+MAYAN_TRAEFIK_LE_EMAIL=youremail@example.org
+MAYAN_TRAEFIK_LE_PRODUCTION=false
+MAYAN_TRAEFIK_TLS_CHALLENGE_ENABLE=false
+
+# Enable for production certificate
+#MAYAN_TRAEFIK_LE_SERVER=https://acme-v02.api.letsencrypt.org/directory
+
+# Enable TLS support for the Mayan EDMS UI.
+MAYAN_TLS_ENABLE=true
+
+# Replace with you fully qualified domain name.
+MAYAN_EXTERNAL_DOMAIN=localhost
