--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,117 +4,73 @@ x-mayan-container:
   &mayan-container
   depends_on:
     - postgresql
+    - rabbitmq
     - redis
-    # Enable to use RabbitMQ
-    #- rabbitmq
   env_file: env_file
   environment:
-    # Enable to use RabbitMQ
-    # MAYAN_CELERY_BROKER_URL: amqp://${MAYAN_RABBITMQ_USER:-mayan}:${MAYAN_RABBITMQ_PASSWORD:-mayanrabbitpass}@rabbitmq:5672/${MAYAN_RABBITMQ_VHOST:-mayan}
-    # To use RabbitMQ as broker, disable Redis as broker
-    MAYAN_CELERY_BROKER_URL: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/0
-    MAYAN_CELERY_RESULT_BACKEND: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/1
-    MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_NAME:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'${MAYAN_DATABASE_HOST:-postgresql}'}}"
-    MAYAN_DOCKER_WAIT: "${MAYAN_DATABASE_HOST:-postgresql}:5432 redis:6379"
+    MAYAN_CELERY_BROKER_URL: amqp://${MAYAN_RABBITMQ_USER}:${MAYAN_RABBITMQ_PASSWORD}@${MAYAN_RABBITMQ_HOST}:${MAYAN_RABBITMQ_PORT}/${MAYAN_RABBITMQ_VHOST}
+    MAYAN_CELERY_RESULT_BACKEND: redis://:${MAYAN_REDIS_PASSWORD}@${MAYAN_REDIS_HOST}:${MAYAN_REDIS_PORT}/${MAYAN_REDIS_RESULT_DATABASE}
+    MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_NAME}','PASSWORD':'${MAYAN_DATABASE_PASSWORD}','USER':'${MAYAN_DATABASE_USER}','HOST':'${MAYAN_DATABASE_HOST}'}}"
+    MAYAN_DOCKER_WAIT: "${MAYAN_DATABASE_HOST}:${MAYAN_DATABASE_PORT} ${MAYAN_REDIS_HOST}:${MAYAN_REDIS_PORT} ${MAYAN_RABBITMQ_HOST}:${MAYAN_RABBITMQ_PORT}"
     MAYAN_LOCK_MANAGER_BACKEND: mayan.apps.lock_manager.backends.redis_lock.RedisLock
-    MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/2'}"
-    # Replace with the line below when using RabbitMQ
-    # MAYAN_DOCKER_WAIT: "${MAYAN_DATABASE_HOST:-postgresql}:5432 redis:6379 rabbitmq:5672"
-  image: ${MAYAN_DOCKER_IMAGE_NAME:-mayanedms/mayanedms}:${MAYAN_DOCKER_IMAGE_TAG:-s4.1}
+    MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://:${MAYAN_REDIS_PASSWORD}@${MAYAN_REDIS_HOST}:${MAYAN_REDIS_PORT}/${MAYAN_REDIS_LOCK_DATABASE}'}"
+  image: ${MAYAN_DOCKER_IMAGE_NAME}:${MAYAN_DOCKER_IMAGE_TAG}
   networks:
-    - bridge
+    - mayan-internal
   restart: unless-stopped
   volumes:
-    - ${MAYAN_APP_VOLUME:-app}:/var/lib/mayan
+    - ${MAYAN_APP_VOLUME}:/var/lib/mayan
     # Optional volumes to access external data like staging or watch folders
     # - /opt/staging_folder:/staging_folder
     # - /opt/watch_folder:/watch_folder
 
 networks:
-  bridge:
+  mayan-internal:
     driver: bridge
+  traefik-public:
+    external: true
 
 services:
+  # Mayan EDMS services.
+
   app:
     <<: *mayan-container
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`www.example.com`)"  # Replace this with your published URL
-      - "traefik.http.routers.mayan.rule=Host(`mayan.app`)"
-      - "traefik.http.routers.mayan.entrypoints=web"
+      - "traefik.http.middlewares.mayan_frontend_redirect.redirectscheme.permanent=false"
+      - "traefik.http.middlewares.mayan_frontend_redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.mayan_frontend_http.entrypoints=http"
+      - "traefik.http.routers.mayan_frontend_http.middlewares=mayan_frontend_redirect"
+      - "traefik.http.routers.mayan_frontend_http.rule=Host(`${MAYAN_EXTERNAL_DOMAIN}`)"
+      - "traefik.http.routers.mayan_frontend_https.entrypoints=https"
+      - "traefik.http.routers.mayan_frontend_https.rule=Host(`${MAYAN_EXTERNAL_DOMAIN}`)"
+      - "traefik.http.routers.mayan_frontend_https.tls=${MAYAN_TLS_ENABLE}"
+      - "traefik.http.routers.mayan_frontend_https.tls.certresolver=letsencrypt"
+      - "traefik.http.services.mayan_frontend_http.loadbalancer.server.port=8000"
     profiles:
       - all_in_one
-    ports:
-      - "80:8000"
 
-  postgresql:
-    command:
-      - "postgres"
-      - "-c"
-      - "checkpoint_completion_target=0.6"
-      - "-c"
-      - "default_statistics_target=200"
-      - "-c"
-      - "maintenance_work_mem=128MB"
-      - "-c"
-      - "max_connections=150"
-      - "-c"
-      - "shared_buffers=256MB"
-      - "-c"
-      - "work_mem=8MB"
-    environment:
-      POSTGRES_DB: ${MAYAN_DATABASE_NAME:-mayan}
-      POSTGRES_PASSWORD: ${MAYAN_DATABASE_PASSWORD:-mayandbpass}
-      POSTGRES_USER: ${MAYAN_DATABASE_USER:-mayan}
-    image: postgres:${MAYAN_DOCKER_POSTGRES_TAG:-10.18-alpine}
-    networks:
-      - bridge
-    # Disable to allow external access to the database.
-    # ports:
-    #  - "5432:5432"
-    profiles:
-      - postgresql
-    restart: unless-stopped
-    volumes:
-      - ${MAYAN_POSTGRES_VOLUME:-postgres}:/var/lib/postgresql/data
-
-  redis:
-    command:
-      - redis-server
-      - --appendonly
-      - "no"
-      - --databases
-      - "3"
-      - --maxmemory
-      - "100mb"
-      - --maxclients
-      - "500"
-      - --maxmemory-policy
-      - "allkeys-lru"
-      - --save
-      - ""
-      - --tcp-backlog
-      - "256"
-      - --requirepass
-      - "${MAYAN_REDIS_PASSWORD:-mayanredispassword}"
-    image: redis:${MAYAN_DOCKER_REDIS_TAG:-6.2-alpine}
-    networks:
-      - bridge
-    restart: unless-stopped
-    volumes:
-      - ${MAYAN_REDIS_VOLUME:-redis}:/data
-
-  # Run a frontend gunicorn container
+  # Run a frontend gunicorn container.
   frontend:
     <<: *mayan-container
     command:
       - run_frontend
-    ports:
-      - "80:8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.middlewares.mayan_frontend_redirect.redirectscheme.permanent=false"
+      - "traefik.http.middlewares.mayan_frontend_redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.mayan_frontend_http.entrypoints=http"
+      - "traefik.http.routers.mayan_frontend_http.middlewares=mayan_frontend_redirect"
+      - "traefik.http.routers.mayan_frontend_http.rule=Host(`${MAYAN_EXTERNAL_DOMAIN}`)"
+      - "traefik.http.routers.mayan_frontend_https.entrypoints=https"
+      - "traefik.http.routers.mayan_frontend_https.rule=Host(`${MAYAN_EXTERNAL_DOMAIN}`)"
+      - "traefik.http.routers.mayan_frontend_https.tls=${MAYAN_TLS_ENABLE}"
+      - "traefik.http.routers.mayan_frontend_https.tls.certresolver=letsencrypt"
+      - "traefik.http.services.mayan_frontend_http.loadbalancer.server.port=8000"
     profiles:
       - extra_frontend
 
-  # Enable to run standalone workers
+  # Enable to run standalone workers.
   mountindex:
     <<: *mayan-container
     cap_add:
@@ -136,7 +92,7 @@ services:
         bind:
           propagation: shared
 
-  # Run a separate class A worker
+  # Run a separate class A worker.
   worker_a:
     <<: *mayan-container
     command:
@@ -145,7 +101,7 @@ services:
     profiles:
       - extra_worker_a
 
-  # Run a separate class B worker
+  # Run a separate class B worker.
   worker_b:
     <<: *mayan-container
     command:
@@ -154,7 +110,7 @@ services:
     profiles:
       - extra_worker_b
 
-  # Run a separate class C worker
+  # Run a separate class C worker.
   worker_c:
     <<: *mayan-container
     command:
@@ -163,7 +119,7 @@ services:
     profiles:
       - extra_worker_c
 
-  # Run a separate class D worker
+  # Run a separate class D worker.
   worker_d:
     <<: *mayan-container
     command:
@@ -172,7 +128,7 @@ services:
     profiles:
       - extra_worker_d
 
-  # Run a separate Celery beat container
+  # Run a separate Celery beat container.
   celery_beat:
     <<: *mayan-container
     command:
@@ -199,40 +155,113 @@ services:
       - extra_command_performupgrade
     restart: "no"
 
-  # Optional services
+  # Third party services.
+
+  postgresql:
+    command:
+      - "postgres"
+      - "-c"
+      - "checkpoint_completion_target=0.6"
+      - "-c"
+      - "default_statistics_target=200"
+      - "-c"
+      - "maintenance_work_mem=128MB"
+      - "-c"
+      - "max_connections=150"
+      - "-c"
+      - "shared_buffers=256MB"
+      - "-c"
+      - "work_mem=8MB"
+    environment:
+      POSTGRES_DB: ${MAYAN_DATABASE_NAME}
+      POSTGRES_PASSWORD: ${MAYAN_DATABASE_PASSWORD}
+      POSTGRES_USER: ${MAYAN_DATABASE_USER}
+    image: postgres:${MAYAN_DOCKER_POSTGRES_TAG}
+    networks:
+      - mayan-internal
+    profiles:
+      - postgresql
+    restart: unless-stopped
+    volumes:
+      - ${MAYAN_POSTGRES_VOLUME}:/var/lib/postgresql/data
+
+  redis:
+    command:
+      - redis-server
+      - --appendonly
+      - "no"
+      - --databases
+      - "3"
+      - --maxmemory
+      - "100mb"
+      - --maxclients
+      - "500"
+      - --maxmemory-policy
+      - "allkeys-lru"
+      - --save
+      - ""
+      - --tcp-backlog
+      - "256"
+      - --requirepass
+      - "${MAYAN_REDIS_PASSWORD}"
+    image: redis:${MAYAN_DOCKER_REDIS_TAG}
+    networks:
+      - mayan-internal
+    profiles:
+      - redis
+    restart: unless-stopped
+    volumes:
+      - ${MAYAN_REDIS_VOLUME}:/data
+
+  rabbitmq:
+    image: rabbitmq:${MAYAN_DOCKER_RABBITMQ_TAG}
+    environment:
+      RABBITMQ_DEFAULT_USER: ${MAYAN_RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${MAYAN_RABBITMQ_PASSWORD}
+      RABBITMQ_DEFAULT_VHOST: ${MAYAN_RABBITMQ_VHOST}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.mayan_rabbitmq_admin.entrypoints=rabbitmq_admin"
+      - "traefik.http.routers.mayan_rabbitmq_admin.rule=Host(`${MAYAN_EXTERNAL_DOMAIN}`)"
+      - "traefik.http.routers.mayan_rabbitmq_admin.tls=${MAYAN_TLS_ENABLE}"
+      - "traefik.http.routers.mayan_rabbitmq_admin.tls.certresolver=letsencrypt"
+      - "traefik.http.services.mayan_rabbitmq_admin.loadbalancer.server.port=15672"
+    networks:
+      - mayan-internal
+    profiles:
+      - rabbitmq
+    restart: unless-stopped
+    volumes:
+      - ${MAYAN_RABBITMQ_VOLUME}:/var/lib/rabbitmq
 
   traefik:
     container_name: "traefik"
     command:
       #- "--log.level=DEBUG"
-      - "--api.insecure=true"
+      - "--api.insecure=${MAYAN_TRAEFIK_API_INSECURE}"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    image: "traefik:v2.4"
+      - "--certificatesresolvers.letsencrypt.acme.email=${MAYAN_TRAEFIK_LE_EMAIL}"
+      - "--certificatesresolvers.letsencrypt.acme.caserver=${MAYAN_TRAEFIK_LE_SERVER:-https://acme-staging-v02.api.letsencrypt.org/directory}"
+      - "--certificatesresolvers.letsencrypt.acme.tlschallenge=${MAYAN_TRAEFIK_TLS_CHALLENGE_ENABLE}"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--entrypoints.http.address=:80"
+      - "--entrypoints.https.address=:443"
+      - "--entrypoints.rabbitmq_admin.address=:15672"
+    image: "traefik:${MAYAN_DOCKER_TRAEFIK_TAG}"
+    networks:
+      - mayan-internal
+      - traefik-public
     ports:
       - "80:80"
+      - "443:443"
       - "8080:8080"
+      - "15672:15672"
     profiles:
       - traefik
     volumes:
+      - traefik-certificates:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
-
-  rabbitmq:
-    image: rabbitmq:${MAYAN_DOCKER_RABBITMQ_TAG:-3.9-alpine}
-    environment:
-      RABBITMQ_DEFAULT_USER: ${MAYAN_RABBITMQ_USER:-mayan}
-      RABBITMQ_DEFAULT_PASS: ${MAYAN_RABBITMQ_PASSWORD:-mayanrabbitpass}
-      RABBITMQ_DEFAULT_VHOST: ${MAYAN_RABBITMQ_VHOST:-mayan}
-    networks:
-      - bridge
-    ports:
-      - "15672:15672"
-    profiles:
-      - rabbitmq
-    restart: unless-stopped
-    volumes:
-      - ${MAYAN_RABBITMQ_VOLUME:-rabbitmq}:/var/lib/rabbitmq
 
 volumes:
   app:
@@ -240,3 +269,4 @@ volumes:
   mountindex:
   rabbitmq:
   redis:
+  traefik-certificates:
