Add new test trigger branches
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -249,6 +249,7 @@ job_python_push_pypi:
     - releases/staging
     - tests/all
     - tests/python
+    - tests/upgrade
   stage: stage_test
 
 job_mysql_upgrade_test:
@@ -331,6 +332,7 @@ job_sqlite_upgrade_test:
     - releases/python_minor
     - releases/staging
     - tests/all
+    - tests/base
     - tests/python
   stage: stage_test
 
