Fix the Docker Stack DB wait hostname
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/stack.yml
+++ b/docker/stack.yml
@@ -12,7 +12,7 @@ services:
       MAYAN_CELERY_BROKER_URL: redis://redis:6379/1
       MAYAN_CELERY_RESULT_BACKEND: redis://redis:6379/0
       MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'mayan','PASSWORD':'mayandbpass','USER':'mayan','HOST':'db'}}"
-      MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379"
+      MAYAN_DOCKER_WAIT: "db:5432 redis:6379"
       MAYAN_LOCK_MANAGER_BACKEND: mayan.apps.lock_manager.backends.redis_lock.RedisLock
       MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://:redis:6379/2'}"
     image: mayanedms/mayanedms:s4.1
