Fix the Docker Stack Redis lock argument
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/stack.yml
+++ b/docker/stack.yml
@@ -14,7 +14,7 @@ services:
       MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'mayan','PASSWORD':'mayandbpass','USER':'mayan','HOST':'db'}}"
       MAYAN_DOCKER_WAIT: "db:5432 redis:6379"
       MAYAN_LOCK_MANAGER_BACKEND: mayan.apps.lock_manager.backends.redis_lock.RedisLock
-      MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://:redis:6379/2'}"
+      MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://redis:6379/2'}"
     image: mayanedms/mayanedms:s4.1
     ports:
       - 80:8000
