Docker Compose updates
- Add a Redis profile.
- Default to RabbitMQ a broker.
- Change default RabbitMQ image from 3.9-alpine to
  3.9-management-alpine.
- Improve Traefik configuration.
- Add a dedicated network for Traefik.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -8,11 +8,24 @@
 COMPOSE_PROJECT_NAME=mayan
 
 # Default profile
-COMPOSE_PROFILES=all_in_one,postgresql
+COMPOSE_PROFILES=all_in_one,postgresql,redis
 
+# User alternate Mayan EDMS Docker image or tag.
 # MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
 # MAYAN_DOCKER_IMAGE_TAG=s4.1
 
-# Enable to use the RabbitMQ image with the management plugin.
-# Also port mapping 15672:15672 in docker-compose file.
-# MAYAN_DOCKER_RABBITMQ_TAG=3.9-management-alpine
+# Enable to use production Let's Encrypt server.
+# MAYAN_TRAEFIK_LETS_ENCRYPT_SERVER=https://acme-v02.api.letsencrypt.org/directory
+
+# Enable to launch the Let's Encrypt TLS challenge
+# MAYAN_TRAEFIK_LETS_ENCRYPT_TLS_CHALLENGE=true
+
+# Enable to activate the Traefik UI.
+# MAYAN_TRAEFIK_API_INSECURE=true
+
+# Configure the administrative email for the domain
+MAYAN_TRAEFIK_LETS_ENCRYPT_EMAIL=
+MAYAN_TRAEFIK_EXTERNAL_DOMAIN=
+
+# Expose the RabbitMQ administrative interface.
+MAYAN_TRAEFIK_RABBITMQ_ENABLE=false
