--- a/.tx/config
+++ b/.tx/config
@@ -194,7 +194,7 @@ source_file = mayan/apps/metadata/locale/en/LC_MESSAGES/django.po
 source_lang = en
 type = PO
 
-[mayan-edms.mimetype-4-0]
+[mayan-edms.mime_types-4-0]
 file_filter = mayan/apps/mimetype/locale/<lang>/LC_MESSAGES/django.po
 source_file = mayan/apps/mimetype/locale/en/LC_MESSAGES/django.po
 source_lang = en
