--- a/config.env
+++ b/config.env
@@ -20,8 +20,10 @@ DEFAULT_USER_SETTINGS_MODULE=user_settings
 DOCKER_HOST_REGISTRY_NAME=docker-registry.local
 DOCKER_HOST_REGISTRY_PORT=5000
 # Docker images
-DOCKER_DIND_IMAGE_VERSION=docker:20-dind
 DOCKER_IMAGE_MAYAN_NAME=mayanedms/mayanedms
+# Docker image versions
+DOCKER_DIND_IMAGE_VERSION=docker:20-dind
+DOCKER_ELASTIC_IMAGE_VERSION=elasticsearch:7.14.2
 DOCKER_LINUX_IMAGE_VERSION=debian:11.1-slim
 DOCKER_MYSQL_IMAGE_VERSION=mysql:8.0
 DOCKER_ORACLE_IMAGE_VERSION=wnameless/oracle-xe-11g-r2
