Lower resources of the standalone D worker
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -192,6 +192,7 @@ services:
     command:
       - run_worker
       - worker_d
+      - "--concurrency=1 --prefetch-multiplier=1"
     profiles:
       - extra_worker_d
 
