Remove variable to avoid clash
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -204,7 +204,7 @@ services:
     command:
       - /bin/sh
       - -c
-      - 'MAYAN_QUEUE_LIST=${MAYAN_QUEUE_LIST} /usr/local/bin/run_worker.sh --prefetch-multiplier=1'
+      - 'MAYAN_QUEUE_LIST=${MAYAN_WORKER_CUSTOM_QUEUE_LIST} /usr/local/bin/run_worker.sh --prefetch-multiplier=1'
     profiles:
       - extra_worker_custom
 
