Add Elasticsearch container password support
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -17,15 +17,17 @@ COMPOSE_PROFILES=all_in_one,postgresql,rabbitmq,redis
 
 # Security. Change these before the first run.
 
-# MAYAN_RABBITMQ_USER=
-# MAYAN_RABBITMQ_PASSWORD=
-# MAYAN_RABBITMQ_VHOST=
-# MAYAN_REDIS_PASSWORD=
 # MAYAN_DATABASE_NAME=
 # MAYAN_DATABASE_PASSWORD=
 # MAYAN_DATABASE_USER=
 # MAYAN_DATABASE_HOST=
+# MAYAN_ELASTICSEARCH_PASSWORD=
+# MAYAN_RABBITMQ_USER=
+# MAYAN_RABBITMQ_PASSWORD=
+# MAYAN_RABBITMQ_VHOST=
 
+# Enable if using Elasticsearch.
+# MAYAN_REDIS_PASSWORD=
 
 # Traefik
 
