Update Docker Compose ElasticSearch profile name
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     # ports:
     #  - "9200:9200"
     profiles:
-      - elasticsearch_single
+      - elasticsearch
     restart: unless-stopped
     ulimits:
       memlock:
