--- a/docker/.env
+++ b/docker/.env
@@ -15,18 +15,22 @@ COMPOSE_PROFILES=all_in_one,postgresql,rabbitmq,redis
 # MAYAN_DOCKER_IMAGE_TAG=s4.2
 
 
-# Security. Change these before the first run.
+# Modify this to your database server if not using the database deployed
+# by the Docker Compose file.
+# MAYAN_DATABASE_HOST=
 
+# Security. Change these before the first run.
+# Once these are set do not change them here. If you wish to change the
+# passwords or usernames after the installation has completed, follow the
+# documentation of each component individually and then update the password
+# or username in this file. _PASSWORD_START_MARKER
 # MAYAN_DATABASE_NAME=
 # MAYAN_DATABASE_PASSWORD=
 # MAYAN_DATABASE_USER=
-# MAYAN_DATABASE_HOST=
 # MAYAN_ELASTICSEARCH_PASSWORD=
 # MAYAN_RABBITMQ_USER=
 # MAYAN_RABBITMQ_PASSWORD=
 # MAYAN_RABBITMQ_VHOST=
-
-# Enable if using Elasticsearch.
 # MAYAN_REDIS_PASSWORD=
 
 # Traefik
@@ -53,6 +57,7 @@ MAYAN_DOCKER_WAIT: "postgresql:5432 rabbitmq:5672 redis:6379"
 
 #########################################################
 # These variables are passed to the running containers. #
+# They are interpreted by Mayan EDMS.                   #
 #########################################################
 
 # To use block storage.
@@ -76,4 +81,4 @@ MAYAN_DOCKER_WAIT: "postgresql:5432 rabbitmq:5672 redis:6379"
 # Example: https://django-auth-ldap.readthedocs.io/en/latest/example.html
 # Enable the following environment variables and restart the stack.
 # MAYAN_PIP_INSTALLS="python-ldap django_auth_ldap"
-# MAYAN_APT_INSTALLS="gcc libldap2-dev/buster-backports libsasl2-dev python3-dev"
+# MAYAN_APT_INSTALLS="gcc libldap2-dev libsasl2-dev python3-dev"
