Include LDAP libraries and Python modules
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -79,6 +79,4 @@ MAYAN_DOCKER_WAIT: "postgresql:5432 rabbitmq:5672 redis:6379"
 # Edit the `user_settings/ldap_connection_settings' file to work with your
 # LDAP server.
 # Example: https://django-auth-ldap.readthedocs.io/en/latest/example.html
-# Enable the following environment variables and restart the stack.
-# MAYAN_PIP_INSTALLS="python-ldap django_auth_ldap"
-# MAYAN_APT_INSTALLS="gcc libldap2-dev libsasl2-dev python3-dev"
+# Restart the stack and test.
