Fix Docker file typos
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -52,7 +52,7 @@ MAYAN_TRAEFIK_EXTERNAL_DOMAIN=
 MAYAN_TRAEFIK_RABBITMQ_ENABLE=false
 
 # Change if you use external services.
-MAYAN_DOCKER_WAIT: "postgresql:5432 rabbitmq:5672 redis:6379"
+MAYAN_DOCKER_WAIT="postgresql:5432 rabbitmq:5672 redis:6379"
 
 
 #########################################################
