--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -234,7 +234,7 @@ services:
       RABBITMQ_DEFAULT_PASS: ${MAYAN_RABBITMQ_PASSWORD:-mayanrabbitpass}
       RABBITMQ_DEFAULT_VHOST: ${MAYAN_RABBITMQ_VHOST:-mayan}
     labels:
-      - "traefik.enable=${MAYAN_TRAEFIK_RABBITMQ_ENABLE;-false}"
+      - "traefik.enable=${MAYAN_TRAEFIK_RABBITMQ_ENABLE:-false}"
       - "traefik.http.routers.mayan_frontend_https.tls=true"
       - "traefik.http.routers.mayan_frontend.rule=Host(`${MAYAN_TRAEFIK_EXTERNAL_DOMAIN}`)"
       - "traefik.http.routers.mayan_frontend.entrypoints=:15672"
