Support local Docker registries
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,6 +133,8 @@ job_docker_testing:
   only:
     - releases/testing
   script:
+    - mkdir -p /etc/docker
+    - if [ "${REGISTRY_MIRRORS}" ]; then echo "{\"registry-mirrors\": [\"${REGISTRY_MIRRORS}\"]}" > /etc/docker/daemon.json; fi
     - DOCKER_VERSION=`cat docker/rootfs/version`
     - DOCKER_IMAGE_MAYAN_NAME=$CI_REGISTRY_IMAGE
     - make docker-build
