--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ job_docker_testing:
     - releases/testing
   script:
     - mkdir -p /etc/docker
-    - if [ "${REGISTRY_MIRRORS}" ]; then echo "{\"registry-mirrors\": [\"${REGISTRY_MIRRORS}\"]}" > /etc/docker/daemon.json; fi
+    - if [ "${REGISTRY_MIRRORS}" ]; then echo "{\"registry-mirrors\":\[\"${REGISTRY_MIRRORS}\"\]}" > /etc/docker/daemon.json; fi
     - DOCKER_VERSION=`cat docker/rootfs/version`
     - DOCKER_IMAGE_MAYAN_NAME=$CI_REGISTRY_IMAGE
     - make docker-build
